Dushyant-updated part

--- a/Miniproject_Grp_14.ipynb
+++ b/Miniproject_Grp_14.ipynb
@@ -970,16 +970,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "03d62352",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Matplotlib Graph"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "id": "41cdfd56",
    "metadata": {},
@@ -1006,12 +996,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "3f679ec3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Equation using latext"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abf770f4",
+   "metadata": {},
+   "source": [
+    "- $(x + y)^2 = x^2 + y^2 + 2xy$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95f1ac5c",
+   "metadata": {},
+   "source": [
+    "## Color"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f18f97d",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:blue\"> this</span>\n",
+    "<span style=\"color:red\">is</span>\n",
+    "<span style=\"color:green\">an</span>\n",
+    "<span style=\"color:orange\">example</span>\n",
+    "<span style=\"color:violet\">of</span>\n",
+    "<span style=\"color:pink\">colored</span>\n",
+    "<span style=\"color:black\">text</span>"
+   ]
   }
  ],
  "metadata": {
