--- a/Miniproject_Grp_14.ipynb
+++ b/Miniproject_Grp_14.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cf26de73",
    "metadata": {},
@@ -10,6 +11,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "63bedb9e",
    "metadata": {},
@@ -18,6 +20,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5f933c74",
    "metadata": {},
@@ -31,6 +34,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a1ecf390",
    "metadata": {},
@@ -961,6 +965,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1a358392",
    "metadata": {},
@@ -996,6 +1001,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3f679ec3",
    "metadata": {},
@@ -1004,6 +1010,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "abf770f4",
    "metadata": {},
@@ -1012,6 +1019,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "95f1ac5c",
    "metadata": {},
@@ -1020,6 +1028,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5f18f97d",
    "metadata": {},
@@ -1031,6 +1040,34 @@
     "<span style=\"color:violet\">of</span>\n",
     "<span style=\"color:pink\">colored</span>\n",
     "<span style=\"color:black\">text</span>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a075e703",
+   "metadata": {},
+   "source": [
+    "## This is an image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5dee861c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (412551500.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[6], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    <img src=\"test.jpg\" width = 200 height = 200>\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "<img src=\"test.jpg\" width = 200 height = 200>"
    ]
   }
  ],
@@ -1050,7 +1087,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
